prover-ray/zkcdriver/testdata/synced/invalid/break_02.zkc
//error:5:5-10:break outside loop
fn f(x:u8) -> (r:u8) {
  r = 0
  if x == 0 {
    break
  }
  return
}
